--- a/requirements.txt
+++ b/requirements.txt
@@ -3,3 +3,7 @@ pandas>=1.3
 numpy>=1.21
 scikit-learn>=1.0
 openpyxl>=3.0
+google-cloud-aiplatform>=1.25.0
+google-cloud-storage>=2.8.0
+protobuf>=3.20.0
+python-dotenv>=0.19.0
